js/components/Editor.css
/* vim:set ts=2 sw=2 sts=2 et: */

/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

/**
 * There's a known codemirror flex issue with chrome that this addresses.
 * BUG https://github.com/jlongster/debugger.html/issues/63
 */
.editor {
  position: absolute;
  height: calc(100% - 30px);
  width: 100%;
  top: 30px;
  left: 0px;
}

.editor.breakpoint {
  fill: var(--theme-selection-background);
  width: 40px;
}

.CodeMirror-line {
  font-family: Menlo, monospace !important;
}

.debug-line .CodeMirror-line {
  background-color: var(--breakpoint-active-color) !important;
}

/* Don't display the highlight color since the debug line
   is already highlighted */
.debug-line .CodeMirror-activeline-background {
  display: none;
}

